# ova_site

./: .gitignore  Dockerfile  conftest.py  copy_db.sh  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  startup.sh
.github/workflows/: azure-webapps-python.yml  main_ova(blue).yml  main_ova.yml  prod_auth_ova(test).yml
courses/: admin.py  apps.py  mixins.py  models.py  signals.py  urls.py  views.py  wagtail_hooks.py
courses/management/commands/: import_course_structure.py  initial_data.py
courses/migrations/: 0001_initial.py  0002_coursesindexpage.py  0003_role_instructor_active_instructor_tagline_and_more.py  0004_remove_instructor_photo_url_instructor_photo_and_more.py  0005_instructorsorderable.py  0006_remove_coursepage_instructors.py  0007_coursepage_image_coursecategorytag_coursepage_tags.py  0008_remove_instructor_photo_instructor_image.py  0009_alter_coursepage_content.py  0010_tagsnippet.py  0011_alter_coursepage_content.py  0012_alter_chapterpage_content_alter_segmentpage_content.py  0013_alter_quiz_chapter.py  0014_alter_choice_question_alter_question_quiz.py  0015_quizprogress.py  0016_alter_coursematerial_options_and_more.py  0017_segmentpage_aspect_ratio_segmentpage_height_and_more.py  0018_quizprogress_answers_snapshot_alter_quiz_title.py  0019_coursepage_duration_seconds_and_more.py  0020_coursepage_allowed_emails_coursepage_coming_soon.py  0021_question_code_language_question_code_snippet_and_more.py  0022_chapterpage_is_intro.py  0023_remove_question_code_language.py  0024_alter_choice_options_alter_question_options_and_more.py
courses/templates/admin/courses/courseprogress/: change_list.html  reconcile.html
courses/templates/courses/: chapter_page.html  coming_soon.html  course_page.html  courses_index_page.html  segment_page.html
courses/templatetags/: code_rendering.py  get_item.py
courses/tests/: conftest.py  test_intro_chapter.py  test_progress_completion.py  test_signal_reconcile.py  test_vimeo_duration.py
home/: models.py
home/migrations/: 0001_initial.py  0002_homepage_body.py  0003_noncoursepage_aboutpage_contactpage_newspage_and_more.py  0004_accessibilitypage_brandpage.py  0005_remove_newspage_noncoursepage_ptr_delete_contactpage_and_more.py  0006_announcement.py  0007_alter_announcement_sort_order.py
home/templates/home/: about.html  accessibility.html  brand.html  certificate.html  home_page.html
ova/: __init__.py  admin.py  asgi.py  middleware.py  tests.py  urls.py  views.py  wsgi.py
ova/settings/: base.py  dev.py  production.py  test.py
ova/static/: index.html  site.webmanifest
ova/static/.well-known/appspecific/: com.chrome.devtools.json
ova/static/css/: style.css
ova/static/css/imports/: about.css  announcements.css  article.css  background.css  buttons.css  certificate.css  code.css  coming-soon.css  course-page.css  course.css  courses.css  cover.css  fonts.css  footer.css  general.css  header.css  icons.css  logo.css  news.css  people.css  quiz.css  reset.css  screen-reader.css  sign-in.css  sponsors.css  switch.css  theme-picker.css  type.css  variables.css  video.css  wave.css
ova/static/data/: people.json
ova/static/js/: script.js
ova/static/js/imports/: Accessibility.js  App.js  Background.js  Certificate.js  Contributors.js  Course.js  Courses.js  Icons.js  Instructors.js  Links.js  Logo.js  People.js  PreviewVideo.js  Progress.js  Quiz.js  ThemePicker.js  Utils.js  Video.js
ova/static/media/people/: resize.sh
ova/static/media/videos/: intro-en.vtt  intro-stinger-end-en.vtt
ova/templates/: 404.html  base.html  certificate.html  robots.txt
ova/templates/account/: base_confirm_code.html  login.html  request_login_code.html  signup.html
ova/templates/account/email/: base_message.txt  login_code_message.txt  login_code_subject.txt
ova/templates/admin/: analytics_dashboard.html  index.html  run_migrations.html  user_change_form_with_progress.html  user_course_progress.html
ova/templates/partials/: about.html  announcements.html  background.html  certificate.html  chapter-arrows.html  chapter-list.html  compact-view.html  contributors.html  course.html  courses.html  cover.html  dev.html  email-address.html  email-mailto.html  favicons.html  footer.html  header.html  icon.html  instructors.html  materials.html  meta.html  news.html  overview.html  people.html  quiz.html  scripts.html  sign-in-warning.html  sponsors.html  styles.html  title.html  video.html
scripts/: copy_db.sh
users/: adapter.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
users/management/commands/: cleanup_unverified_users.py
users/migrations/: 0001_initial.py  0002_alter_user_profile_pic.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_user_first_name_user_last_name.py
