[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyascii==0.3.2",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "autobahn==24.4.2",
    "automat==25.4.16",
    "azure-core==1.34.0",
    "azure-storage-blob==12.25.1",
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "channels[daphne]==4.2.2",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "cryptography==45.0.2",
    "daphne==4.2.0",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "django==5.2.1",
    "django-debug-toolbar==5.2.0",
    "django-filter==25.1",
    "django-modelcluster==6.4",
    "django-permissionedforms==0.1",
    "django-storages[azure]==1.14.6",
    "django-stubs-ext==5.2.0",
    "django-taggit==6.1.0",
    "django-tasks==0.7.0",
    "django-treebeard==4.7.1",
    "djangorestframework==3.16.0",
    "draftjs-exporter==5.1.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "filetype==1.2.0",
    "gunicorn==23.0.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "laces==0.1.2",
    "matplotlib-inline==0.1.7",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "parso==0.8.4",
    "pillow==11.2.1",
    "pillow-heif==0.21.0",
    "prompt-toolkit==3.0.51",
    "psycopg-binary==3.2.9",
    "psycopg[binary]==3.2.9",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyopenssl==25.1.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "service-identity==24.2.0",
    "setuptools==80.7.1",
    "six==1.17.0",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "telepath==0.3.1",
    "traitlets==5.14.3",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wagtail==7.0",
    "wagtail-markdown==0.12.1",
    "wcwidth==0.2.13",
    "willow==1.10.0",
    "zope-interface==7.2",
    "whitenoise==6.7.0",
    "bleach==4.1.0",
    "markdown==3.8.2",
    "webencodings==0.5.1",
    "django-allauth>=65.12.0",
]
