[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anyascii==0.3.3",
    "asgiref==3.11.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "autobahn==25.11.1",
    "automat==25.4.16",
    "azure-core==1.36.0",
    "azure-storage-blob==12.27.1",
    "beautifulsoup4==4.14.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "channels[daphne]==4.3.2",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "cryptography==46.0.3",
    "daphne==4.2.1",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "django==5.2.9",
    "django-debug-toolbar==6.1.0",
    "django-filter==25.2",
    "django-modelcluster==6.4.1",
    "django-permissionedforms==0.1",
    "django-storages[azure]==1.14.6",
    "django-stubs-ext==5.2.8",
    "django-taggit==6.1.0",
    "django-tasks==0.7.0",
    "django-treebeard==4.8.0",
    "djangorestframework==3.16.1",
    "draftjs-exporter==5.1.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "filetype==1.2.0",
    "gunicorn==23.0.0",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.11.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "laces==0.1.2",
    "matplotlib-inline==0.2.1",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "parso==0.8.5",
    "pillow==11.3.0",
    "pillow-heif==1.1.1",
    "prompt-toolkit==3.0.52",
    "psycopg-binary==3.3.2",
    "psycopg[binary]==3.3.2",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pyopenssl==25.3.0",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "service-identity==24.2.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "sqlparse==0.5.4",
    "stack-data==0.6.3",
    "telepath==0.3.1",
    "traitlets==5.14.3",
    "twisted==25.5.0",
    "txaio==25.12.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.6.1",
    "wagtail==7.0",
    "wagtail-markdown==0.13.0",
    "wcwidth==0.2.14",
    "willow==1.12.0",
    "zope-interface==8.1.1",
    "whitenoise==6.11.0",
    "bleach==4.1.0",
    "markdown==3.10",
    "webencodings==0.5.1",
    "django-allauth==65.13.1",
    "django-extensions==4.1",
    "cbor2==5.8.0",
    "msgpack==1.1.2",
    "py-ubjson==0.16.1",
    "ujson==5.11.0",
    "django-azure-communication-email>=1.6.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.6",
]
