[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "azure-core>=1.36,<2.0",
    "azure-storage-blob>=12.27,<13.0",
    "beautifulsoup4>=4.14,<5.0",
    "bleach>=4.1,<5.0",
    "channels[daphne]>=4.3,<5.0",
    "cryptography>=46.0,<47.0",
    "daphne>=4.2,<5.0",
    "django>=5.2,<6.0",
    "django-allauth>=65.13,<66.0",
    "django-azure-communication-email>=1.6,<2.0",
    "django-debug-toolbar>=6.1,<7.0",
    "django-extensions>=4.1,<5.0",
    "django-filter>=25.2,<26.0",
    "django-storages[azure]>=1.14,<2.0",
    "django-stubs-ext>=5.2,<6.0",
    "djangorestframework>=3.16,<4.0",
    "gunicorn>=23.0,<24.0",
    "ipython>=9.8,<10.0",
    "markdown>=3.10,<4.0",
    "msgpack>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
    "pillow>=11.3,<12.0",
    "pillow-heif>=1.1,<2.0",
    "psycopg[binary]>=3.3,<4.0",
    "py-ubjson>=0.16,<1.0",
    "python-dotenv>=1.2,<2.0",
    "requests>=2.32,<3.0",
    "ujson>=5.11,<6.0",
    "wagtail>=7.0,<7.1",
    "wagtail-markdown>=0.13,<0.14",
    "whitenoise>=6.11,<7.0",
]

[dependency-groups]
dev = [
    "black>=25.12,<26.0",
    "pytest>=9.0,<10.0",
    "pytest-django>=4.11,<5.0",
    "ruff>=0.14,<0.15",
    "ty>=0.0.6,<0.1.0",
    "wagtail-factories>=4.3,<5.0",
]